feat: add get models by provider
